<resources>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

    <string name="cicla">&#xf200;</string>
    <string name="app_name">Biciclick</string>
    <string name="TextViewAcceso">Acceso</string>
    <string name="TextViewSaludo">¡Hola! Qué bueno verte de nuevo.</string>
    <string name="TextViewEmail">Email</string>
    <string name="TextViewContraseña">Contraseña</string>
    <string name="ButtonIngresar">Ingresar</string>
    <string name="TextViewOlvideCont">Olvidé mi contraseña</string>
    <string name="TextViewRegistro">Registro</string>
    <string name="TextViewPaso13">Paso 1 de 3</string>
    <string name="TextViewName">Name</string>
    <string name="TextViewFirtsName">Nombres</string>
    <string name="TextViewSecondName">Apellidos</string>
    <string name="TextInputFirtsName">Tu nombre</string>
    <string name="TextInputSecondName">Tu apellido</string>
    <string name="TextViewTelefono">Teléfono</string>
    <string name="TextInputTelefono">Tú numero celular</string>
    <string name="TextInputEmailRegistro">Tu dirección de correo electrónico</string>
    <string name="TextViewEmpresa">Empresa</string>
    <string name="TextInputEmpresa">Selecciona tu empresa</string>
    <string name="TextViewDireccion">Dirección</string>
    <string name="TextInputDireccion">Tu dirección de residencia</string>
    <string name="TextViewTienesCuenta">¿Ya tienes una cuenta?</string>
    <string name="TextViewIngresa">Ingresa aquí</string>
    <string name="TextViewRegistroE">Registro Exitoso</string>
    <string name="TextViewTextoRegistro">Ya estás listo para comenzar a utilizar Biciclick,
         la mejor forma de moverte en la ciudad.</string>
    <string name="TextViewTextoRegistro2">Acércate a un punto Biciclick</string>
    <string name="ButtonVerPuntos">Salir</string>
    <string name="ButtonYaEstoy">Ya estoy frente a una Bici</string>
    <string name="TextViewTextoFoto">Ahora te pediremos 2 fotos para confirmar tu identidad.</string>
    <string name="TextViewSelfie">Tómate una foto selfie</string>
    <string name="TextViewCedula">Toma una foto de tu cédula.</string>
    <string name="TextViewPaso23">Paso 2 de 3</string>
    <string name="ButtonContinuar">Continuar</string>
    <string name="TextViewPaso33">Paso 3 de 3</string>
    <string name="TextViewCodigo">Ingresa el código que has recibido en tu celular</string>
    <string name="Validacion">Estamos validando tu información, esto puede tomar unos minutos.</string>
    <string name="textValidacion">si está tomando más tiempo o tienes alguna inquietud,
    contactanos al:</string>
    <string name="numberphone">+57 3214492810</string>
    <string name="Terminos">Acepto los términos y condiciones y la política de privacidad.</string>
    <string name="ButtonRecordarCont">Recordar contraseña</string>
    <string name="HintEmail">example@email.com</string>
    <string name="ButtonRecordar">Recordar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="server">https://biciclick.loducode.com</string>
<!--    <string name="server">http://172.16.1.9</string>-->
    <string name="TextViewInicio">Inicio - Uso Biciclick</string>
    <string name="TextViewViajesgraph">Viajes de Mes</string>
    <string name="TextViewTopE">Top Empresa</string>
    <string name="TextViewPerfil">Mi Perfil</string>
    <string name="TextViewViaje">Tu Viaje</string>
    <string name="TextViewTuViaje">Tu viaje ha comenzado, vuelve con nosotros cuando lo termines</string>
    <string name="TextViewPuntoI">Punto de Inicio</string>
    <string name="TextViewHoraI">Hora de Inicio</string>
    <string name="TextViewTiempo">Tiempo Transcurrido</string>
    <string name="TextViewDestino">Destino</string>
    <string name="TextViewPuntoE">Punto Entrega</string>
    <string name="TextViewHoraE">Hora de Entrega</string>
    <string name="TextViewTrips">Viajes</string>
    <string name="TextViewAhorro">Ahorro Económico</string>
    <string name="TextViewHuella">Huella de Carbono</string>
    <string name="ButtonOk">OK</string>
    <string name="ButtonNo">No he terminado mi viaje</string>
    <string name="TextViewTomarB">Tomar Bici</string>
    <string name="TextViewInstuciones">Instrucciones</string>
    <string name="TextViewDesbloquear">Desbloquear Candado</string>
    <string name="TextVierLeer">Leer QR</string>
    <string name="TextViewDest">Destino de tu Viaje</string>
    <string name="TextViewDestV">Para poder medir tu ahorro económico y tu
        huella de carbono, cuéntanos cuál es tu destino de viaje.</string>
    <string name="HintEscribe">Escribe la Ubicación</string>
    <string name="TextViewEntregar">Entregar Bici</string>
    <string name="ButtonTerminar">Terminar Viaje</string>
    <string name="TextViewMap">Mapa Puntos Biciclick</string>
    <string name="TextViewDist">Distancia</string>
    <string name="ButtonCambios">Guardar Cambios</string>
    <string name="HintPunto">Seleccione Punto</string>
    <string name="expiroToken">Su sesio ha expirado, inicie sesion de nuevo</string>
    <string name="fotoTerminar">¿Deseas terminar tu viaje?</string>
    <string name="aceptarTerminar">Aceptar</string>
    <string name="cancelarTerminar">Cancelar</string>
    <string name="infoFoto">Foto de la Bici en el punto</string>
    <string name="phone">https://api.whatsapp.com/send?phone=573214492810</string>
    <string name="phone2">text=Invitation</string>
    <string name="phone3">+573214492810</string>
    <string name="terminos">https://programmerclick.com/article/4125913791/</string>
    <string name="cond">https://programmerclick.com/article/4125913791/</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>