<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                style="@style/estiloletranegra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextViewRegistro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextViewPaso23" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/logo_biciclick" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        style="@style/EstiloLetra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewTextoFoto"
        android:layout_marginVertical="16dp"/>
    <ImageView
        android:id="@+id/imageselfie"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/selfie"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/textSelfie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewSelfie"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/imagecedulafront"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/cedula"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"/>
        <ImageView
            android:id="@+id/imagecedulaback"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/cedula"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewCedula"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:id="@+id/terminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Terminos"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azulO"
        android:text="@string/ButtonContinuar"
        android:textColor="@color/white"
        android:layout_marginVertical="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewTienesCuenta" />
        <TextView
            style="@style/EstiloLetra"
            android:id="@+id/textViewRegistro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewIngresa"
            android:gravity="right"/>
    </LinearLayout>

</LinearLayout>