<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        style="@style/estiloletra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewViaje"
        android:gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <View
        android:id="@+id/dividerTv1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/maps"/>

        <TextView
            android:id="@+id/txtPuntoI"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/TextViewPuntoI"
            android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="center"
            android:paddingRight="8dp">
            <TextView
                android:id="@+id/txtPuntoInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:id="@+id/dividerTv2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event"/>

        <TextView
            android:id="@+id/txtHoraI"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/TextViewHoraI"
            android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="center"
            android:paddingRight="8dp">
            <TextView
                android:id="@+id/txtHoraInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:id="@+id/dividerTv3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time"/>

        <TextView
            android:id="@+id/txtTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/TextViewTiempo"
            android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="center"
            android:paddingRight="8dp">
<!--            <TextView-->
<!--                android:id="@+id/txtTiempoTrans"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="right" />-->
            <Chronometer
                android:id="@+id/txtTiempoTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/estiloletra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewDest"
        android:gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <View
        android:id="@+id/dividerTv4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewDestV"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_gravity="center"/>

        <TextView
            style="@style/estiloletra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewDestino"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="center"
            android:paddingRight="8dp">
            <EditText
                android:id="@+id/destinoT"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:hint="@string/HintEscribe"
                android:background="@drawable/borde_rect"
                android:padding="4dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/dividerTv5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_gravity="center"/>

        <TextView
            style="@style/estiloletra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextViewPuntoE"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="center"
            android:paddingRight="8dp">
            <com.colombiagames.biciclick.utils.SpinnerCustom
                android:id="@+id/singleItemSelectionSpinner"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                app:hintText="@string/HintPunto"
                android:background="@drawable/borde_rect"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/dividerTv6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginBottom="8dp"/>

    <TextView
        style="@style/estiloletra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewEntregar"
        android:gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <View
        android:id="@+id/dividerTv7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/ButtonOkV"
        android:layout_width="280dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/ButtonTerminar"
        android:textColor="@color/white"
        android:backgroundTint="@color/rojo"
        android:drawableLeft="@drawable/ic_location_white"
        android:layout_marginVertical="16dp"/>

</LinearLayout>